<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login">

    <ImageView
        android:id="@+id/imageViewTopTitle"
        android:scaleType="centerCrop"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_top"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="180dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTopTitle"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="40sp"
            android:textStyle="bold" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_ingreso"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/title_ingreso_modo"
            android:inputType="textPersonName" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_password"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/title_change_password"
            android:inputType="textPassword" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <Button
            android:id="@+id/botonIngresar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/title_intro"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_without"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textViewRegistrarse"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Registrate !"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="#7C4DFF" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_oldPass"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#7C4DFF"
                android:text="@string/title_recovery"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="680dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/image_bottom" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>